Kubernetes Demo project-Deploying MongoDB and Mongo Express/mongo-express.yaml
#check docker hub mongo-express image for details on port, environment variables, etc
#Deployment configuration for Mongo Express
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
  labels:
    app: mongo-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        ports:
        - containerPort: 8081
--- #document sepeartion for multiple docs
#Service configuration for Mongo Express
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: LoadBalancer  #assigns service an external IP address and accepts external requests
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
      nodePort: 30000 #port for external IP address, plug into browser to access
